@@ -1,6 +1,6 @@
 AUX xz-utils-4.999.9_beta-darwin.patch 732 RMD160 75fbf90ff0e3f12f49400801aa348ffaded0aeca SHA1 d68a4c249a51a34a86ff7fbbf9fcf510e6ba607c SHA256 29e170ab16af85cc17b2ce563700b197bfbae50fa2ba9db0efa2a89e0a501fc5
 AUX xz-utils-4.999.9_beta-interix.patch 1262 RMD160 3929a3bc82048c2747623f79975318ac8fff3f79 SHA1 e42dd4b5d4810bc07e801ab5812a3daba2d8daba SHA256 f58d2d800fec627029d6f1fb2c1c72c544589078231728c289557d1fee992d4a
 DIST xz-4.999.9beta.tar.gz 1037541 RMD160 1253ce01746c748c8549effa5041224044919c4e SHA1 9627de3997ddcdb02f8d327e84b2cf1941ecd230 SHA256 fa3901d1c034842da47fec1a24a9b5a5bd435f5ecfbb444c168512e2daddb86f
-EBUILD xz-utils-4.999.9_beta.ebuild 1937 RMD160 18f53f6209a0b6c7cfcef093740a850ac0f4a521 SHA1 a78cef5d79deba8bbe4bedb44b079a33c17c01a6 SHA256 e45a18d1001cd14ce7d0cebdaaf61b4c2925e7da1bd181ab8ac01ef2cbd46184
-MISC ChangeLog 1172 RMD160 862d3a5ccfe5748ea0064565b969d52cb0784317 SHA1 e4833a575bb6bc8c9c246867c08b699fecc6bf3b SHA256 dc0166262499bca9b206f169ad5f34a70cd43976c08b808b67d2b1fb5e9c5b6d
+EBUILD xz-utils-4.999.9_beta.ebuild 2039 RMD160 ca340f9c1f9582b405ebd8a0e9f052451c474cab SHA1 26ec34e7fde04eeda20e2f0b9371f0b228e202aa SHA256 c3a7273abd8390da9bb857141ce3c7c4d1e25b75d5223774164e38406c1fd864
+MISC ChangeLog 1328 RMD160 07daef4e6947c227b3d008c3e17c0da8f9e3c12e SHA1 d05ccf0b22172f1c818b2be4d2b0a6034c588adb SHA256 62471f675dbe1c26b6c6e5f111d317d65ac77ad48d05688c9e0aee67957d92c2
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
