@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/xz-utils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.6 2009/10/17 07:51:18 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.7 2009/12/06 00:02:10 vapier Exp $
+
+  06 Dec 2009; Mike Frysinger <vapier@gentoo.org>
+  xz-utils-4.999.9_beta.ebuild, xz-utils-9999.ebuild:
+  Fix up doc install #295834 by Diego E. Pettenò.
 
   17 Oct 2009; Markus Meier <maekke@gentoo.org> metadata.xml:
   remove static-libs description as it is global now
